# quantum_sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  WHITE_PAPER.md  display.cc  grover.cc  grover_search.cc  grover_test.cc  helper.cc  logging.cc  logging.hh  main.cc  modular_exp.cc  modular_exp.hh  qft.cc  shell.cc  shell.hh  shor.cc  state.cc  state.hh  swap.cc  unit_tests.cc  utility_test.cc
.github/workflows/: ci.yml
algorithms/: anneal.cc  anneal.hh  bernstein_vazirani.cc  bernstein_vazirani.hh  deutsch_jozsa.cc  deutsch_jozsa.hh  grover.cc  grover_search.cc  latin_square.cc  latin_square.hh  oracle.hh  qaoa.cc  qaoa.hh  qec.cc  qec.hh  qpe.cc  qpe.hh  qrng.cc  qrng.hh  quantum_counting.cc  quantum_counting.hh  qubo.cc  qubo.hh  shor.cc  shor_classical.cc  shor_classical.hh  shor_quantum.cc  shor_quantum.hh  simon.cc  simon.hh  tsp.cc  tsp.hh  vqa_qaoa.cc  vqa_qaoa.hh  vqe.cc  vqe.hh
algorithms/api/: grover_api.cc  grover_api.hh  shor_api.cc  shor_api.hh
cli/: commands.cc  commands.hh  help_catalog.cc  help_catalog.hh  main.cc  shell.cc  shell.hh  shell_algorithms.cc  shell_detail.hh  shell_gates.cc  shell_setup.cc
demos/: anneal_demo.cc  anneal_demo.hh  bernstein_vazirani_demo.cc  bernstein_vazirani_demo.hh  deutsch_jozsa_demo.cc  deutsch_jozsa_demo.hh  grover_demo.cc  grover_demo.hh  latin_demo.cc  latin_demo.hh  qaoa_demo.cc  qaoa_demo.hh  qpe_demo.cc  qpe_demo.hh  quantum_counting_demo.cc  quantum_counting_demo.hh  qubo_demo.cc  qubo_demo.hh  shor_demo.cc  shor_demo.hh  simon_demo.cc  simon_demo.hh  tsp_demo.cc  tsp_demo.hh  vqa_demo.cc  vqa_demo.hh  vqe_demo.cc  vqe_demo.hh
examples/: README.md  algorithm_comparison.md  anneal_usage.md  api_quickstart.md  bb84_qkd.md  bell_state.qsim  bell_states.md  bernstein_vazirani.md  bomb_detection.md  check_labs.sh  chsh_bell_test.md  course.md  debugging.md  deutsch_jozsa.md  fredkin_swap_test.qsim  glossary.md  grover_usage.md  lab_bell_states.md  lab_grover_counting.md  lab_qaoa.md  lab_shor.md  lab_vqe.md  lesson_plan.md  max_cut.md  mcx_oracle.qsim  noisy_bell.qsim  performance_scaling.md  prerequisites.md  qec_demo.qsim  qpe_t_gate.qsim  qrng_demo.md  quantum_counting.md  quantum_teleportation.md  qubo_usage.md  render_visuals.sh  run_examples.sh  shor_usage.md  shots_bell.qsim  simon_usage.md  superdense_coding.md  (+4 more)
include/: quantum_sim.hh  quantum_sim_demos.hh
internal/: format_utils.hh  limits.hh  qft_utils.hh  validation.hh
math/: README.md  bit_ops.cc  bit_ops.hh  mod_arith.cc  mod_arith.hh  register_layout.hh
scripts/: benchmark_csv.sh  coverage_check.sh
tests/: all_tests.cc  grover_bench.cc  grover_test.cc  helpers.hh  test_harness.hh  unit_algorithms_and_cli.cc  unit_algorithms_and_cli.hh  unit_cli_and_shor.cc  unit_edge_cases.cc  unit_new_features.cc  unit_qft_modexp.cc  unit_qft_modexp.hh  unit_tests.cc
